WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142578
[WinCairo] Crash when leaving page while video is playing.
https://bugs.webkit.org/show_bug.cgi?id=142578
Summary
[WinCairo] Crash when leaving page while video is playing.
peavo
Reported
2015-03-11 06:16:40 PDT
I'm sometimes getting a crash when leaving a page, while a video is playing. This can happen when there is an asynchronous event invoked from a worker thread, accessing the media player object after it has been deleted.
Attachments
Patch
(6.45 KB, patch)
2015-03-11 06:26 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2015-03-11 06:26:12 PDT
Created
attachment 248417
[details]
Patch
peavo
Comment 2
2015-03-20 10:15:13 PDT
Thanks for reviewing :)
WebKit Commit Bot
Comment 3
2015-03-20 10:54:10 PDT
Comment on
attachment 248417
[details]
Patch Clearing flags on attachment: 248417 Committed
r181805
: <
http://trac.webkit.org/changeset/181805
>
WebKit Commit Bot
Comment 4
2015-03-20 10:54:14 PDT
All reviewed patches have been landed. Closing bug.
Mathieu Lafon
Comment 5
2015-03-26 03:07:59 PDT
I don't know if it is related but I have created
bug 143088
for a crash when page is left/closed while video is loading (not yet playing).
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug